--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -86,12 +86,23 @@ Alumni is web based application that can be accessed using common web browser. T
 \fig{width=12cm, bb = 0 0 831 683}{images/screen1.png}{fig:scr1}{Basic user interface.}
 
 The most important functions are:
-The most important functions are:
 \begin{itemize}
-\item Actualities
-\item Mail communication
-\item Personal presentation
-\item Statistical module
+
+\item Actualities. Aktuality predstavujú nástroj pre fakultu, pomocou ktorého informuje absolventov a verejnosť o aktuálnych udalostiach.
+
+\item Anketovy modul.
+Anketový modul slúži na získavanie požadovaných údajov od absolventov pre fakultu. Na základe výsledkov z ankiet môže fakulta generovať požadované štatistiky. Vytvárať ankety má možnosť iba osoba, ktorú určí samotná fakulta. Každá anketa je smerovaná určenej skupine absolventov na základe roku ukončenia štúdia. Ankety sú sprístupnené, absolventovi z určenej skupiny  po prihlásenia do systému
+
+\item Mail communication. 
+Modul mailovej komunikacie umoznuje vymenu informacii a komunikaciu zasielanim sprav medzi fakultou a graduates. 
+
+\item Personal presentation. 
+Každý študent po absolvovaní bakalárskeho štúdia na fakulte sa automaticky stáva absolventom a takisto sa mu automaticky vytvorí konto v systéme ALUMNI. Profily absolventov obsahuju informácie ako: meno, priezvisko, študijný program, rok absolvovania štúdia, dosiahnutý titul, téma záverečnej práce/diplomovej práce, zadávateľ, abstrakt. Okrem toho mozu byt v osobnej prezentacii zahrnute 
+kontaktné informácie – telefón, e-mail, ICQ,  web stránka a informacie o aktualnom zamestnanii alebo história zamestnaní. Prezentačný modul slúži na prezentáciu absolventov na základe tychto vypracovaných profilov. 
+
+\item Statistical module. 
+Štatistický modul slúži na zaznamenávanie štatistických údajov pre účely fakulty. Pracuje nad údajmi z ankiet, a profilov absolventov, a umožňuje generovať výstupnú zostavu v podobe všetkých hlasov pre zvolenú anketu, alebo akciu, resp. používateľa alebo používateľskú skupinu. Generovanie takýchto štatistík môže určiť smer zlepšenia systému vzhľadom k záujmom absolventov. Štatistický modul zaznamenáva prístupy absolventov
+
 \end{itemize}
 
 \section{Architecture}
