--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -39,7 +39,7 @@
 \begin{document}
 
 \begin{abstract}
-The information system for communication with graduates represents only one of many ways how university can keep in touch with its graduates. Ecxept for communication between university and its graduates, the information system allows communication between graduates themselves and their personal presentation in public. The system also collects actual information about working experience of graduates, which can improve faculty credits and teaching process. The presented information system includes all these points, focused on security, usability and comfortable user interface.
+The information system for communication with graduates represents only one of many ways how university can keep in touch with its graduates. Except for communication between university and its graduates, the information system allows communication between graduates themselves and their personal presentation in public. The system also collects actual information about working experience of graduates, which can improve faculty credits and teaching process. The presented information system includes all these points, focused on security, usability and comfortable user interface.
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -48,36 +48,20 @@ The information system for communication with graduates represents only one of m
 
 Communication between graduates and university can be suitable for both sides. In this article we would like to introduce web based software system called ALUMNI developed at Team Project. Our faculty has ambitions to present its graduates to public. The faculty also wants to keep in touch with its graduates using web application, providing a channel for professional and social communication between graduates themselves and the faculty. Focus of the ALUMNI project is on design and implementation of the system that would accomplish these needs. 
 
-A FIIT STU graduate is a person who has been studying at this faculty for minimum three years or more. During this period, the graduate tied up a lot of social contacts with his classmates and his teachers as well. After graduating, these contacts usually cut off and only rarely continue. In general, each student, after he leaves the university, losts most of the contacts. However, the faculty does not want to continue in this trend. The faculty looks at its graduates as at potential bussines partners with possible cooperation with them after study. Graduates are very good source of information and critics that could help inproove the quality of faculty. The best way how to gain required information are feedback forms.
+A FIIT STU graduate is a person who has been studying at this faculty for minimum three years or more. During this period, the graduate tied up a lot of social contacts with his classmates and his teachers as well. After graduating, these contacts usually cut off and only rarely continue. In general, each student, after he leaves the university, losts most of the contacts. However, the faculty does not want to continue in this trend. The faculty looks at its graduates as at potential business partners with possible cooperation with them after study. Graduates are very good source of information and critics that could help improve the quality of faculty. The best way how to gain required information is feedback forms.
 
-
-%* dalsia motivacia, vyhody pre fakultu
-
-%Kazdy absolvent FIIT STU navstevoval tuto fakultu minimalne tri roky, pripadne viac. Počas tohto obdobia nadviazal absolvent množstvo sociálnych kontaktov so svojimi spolužiakmi a tiež so vyučujúcimi. Po ukončení sa tieto kontakty zvyčajne pretrhnú a len málokedy pokračujú ďalej. Predovšetkým tie s vyučujúcimi, všeobecne povedané absolvent stratí akékoľvek kontakty s fakultou. Táto skutočnosť však nie je v záujme fakulty a s veľkou pravdepodobnosťou k tomuto zisteniu dospeje aj absolvent vo svojom ďalšom živote. Tento trend, pretrhnutie kontaktov, je považovaný na fakulte za nežiadúci. Fakulta totiž vidí vo svojich absolventoch ľudí, s ktorými chce spolupracovať aj po ukončení štúdia, chce od nich získavať podnety a pripomienky, ktoré by premietla do svojho budúceho smerovania a do svojho zlepšovania. Ako najprijateľnejšiu formu kooperácie absolventov so fakultou sa z pohľadu fakulty javí spätná väzba a získavanie priamych informácii a názorov od absolventov. K naplneniu tejto vízie zo strany fakulty by mal prispieť aj navrhovaný systém na prezentáciu absolventov ALUMNI,
 
 \section{Business goals}
 
 {\em Present basic information about graduates to the public.}
-It means creation and maintainance of the graduate database and presentation of basic information about individuals to public on the web without access restrictions. We bring some brief information about a graduate, when he studied and graduated, his specialization, topic of his bachelor and diploma project or abstracts. If we are able to get necessary information, the presentation could also involve a graphical expression of employment and skills of graduates from different points of view.
+It means creation and maintenance of the graduate database and presentation of basic information about individuals to public on the web without access restrictions. We bring some brief information about a graduate, when he studied and graduated, his specialization, topic of his bachelor and diploma project or abstracts. If we are able to get necessary information, the presentation could also involve a graphical expression of employment and skills of graduates from different points of view.
 
-{\em Provide gathering of actual informations about graduates in practice to the faculty.} 
-It means to get actual information about contacts, jobs, career development, application/professional focus, areas of graduate activity and personal interests, etc. This information is provided by a graduate. It has a personal character, it means getting them require interest in contact on the both sides and this data should be under protection whith well-organized authorized access.
+{\em Provide gathering of actual information about graduates in practice to the faculty.} 
+It means to get actual information about contacts, jobs, career development, application/professional focus, areas of graduate activity and personal interests, etc. This information is provided by a graduate. It has a personal character, it means getting them require interest in contact on the both sides and this data should be under protection with well-organized authorized access.
 
 {\em Enable communication to graduates.}
 It should be easy and safe way to communicate in informatics community protected by well-designed access rights for groups of authorized participants. It should be used for informal communication within community of colleagues and experts from practice. Except providing contacts, the system can also inform graduates about professional activities of the community, provide some space for them - a forum, eventually some other activities.
 
-%Ciele systému:
-%Prezentovať základné informácie o absolventoch verejnosti.
-%Znamená to zabezpečiť vytvorenie a udržiavanie databázy absolventov a vhodne prezentovať základné informácie o jednotlivcovi verejnosti na webe bez obmedzenia prístupu. Predpokladáme stručnú informáciu o absolventovi, kedy študoval, absolvoval, jeho špecializácia, o téme jeho bakalárskej, prípadne diplomovej práce, prípadne abstrakt práce. Tu by bolo vítané rozšíriť prezentáciu o grafické vyjadrenie zamestnanosti a odbornosti absolventov z rôznych hľadísk, pokiaľ dokážeme od nich získať k tomu potrebné údaje.
-%Sprostredkovať fakulte získavanie aktuálnych informácií o absolventoch v praxi.
-%Ide o aktualizáciu kontaktu, zamestnania, profesijného vývoja, odborného zamerania, oblasti, v ktorej je aktívny, sfér odborného záujmu a pod., tie, ktoré poskytne sám absolvent. Táto oblasť je veľmi citlivá, vyžaduje záujem o kontakt z oboch strán a je podmienená prísnou ochranou údajov s vhodne zorganizovaným autorizovaným prístupom. Je to dôležitá, pre fakultu užitočná úloha, treba ju uvažovať.
-%Umožniť absolventom vzájomnú komunikáciu.
-%Má to byť jednoduchá a bezpečná komunikácia v informatickej komunite chránená starostlivo navrhnutými prístupovými právami pre skupiny autorizovaných účastníkov. Má slúžiť na neformálnu výmenu informácií v komunite kolegov, rovesníkov, odborníkov z praxe, ktoré komunite poskytne sám účastník. Okrem sprostredkovania kontaktu môže byť úlohou tejto časti systému informovať záujemcov o odborných aktivitách komunity, poskytnúť pre ne priestor – fórum, prípadne ďalšie vhodné činnosti.
-
-%obrazok. vztah fakulta alumnus, naznacenie komunikacie
-
-%- graduates view (graduates expectations and requirements)
-%- faculty view (faculty expectations and requirements)
 
 \section{System ALUMNI}
 
@@ -88,33 +72,37 @@ Alumni is web based application that can be accessed using common web browser. T
 The most important functions are:
 \begin{itemize}
 
-\item Actualities. Aktuality predstavujú nástroj pre fakultu, pomocou ktorého informuje absolventov a verejnosť o aktuálnych udalostiach.
+\item {\em Actualities} 
+%Aktuality predstavujú nástroj pre fakultu, pomocou ktorého informuje absolventov a verejnosť o aktuálnych udalostiach.
+represents a tool for faculty, which allows to inform graduates and public about events and news on faculty.
 
-\item Anketovy modul.
-Anketový modul slúži na získavanie požadovaných údajov od absolventov pre fakultu. Na základe výsledkov z ankiet môže fakulta generovať požadované štatistiky. Vytvárať ankety má možnosť iba osoba, ktorú určí samotná fakulta. Každá anketa je smerovaná určenej skupine absolventov na základe roku ukončenia štúdia. Ankety sú sprístupnené, absolventovi z určenej skupiny  po prihlásenia do systému
+\item {\em Inquiry module}
+%Anketový modul slúži na získavanie požadovaných údajov od absolventov pre fakultu. Na základe výsledkov z ankiet môže fakulta generovať požadované štatistiky. Vytvárať ankety má možnosť iba osoba, ktorú určí samotná fakulta. Každá anketa je smerovaná určenej skupine absolventov na základe roku ukončenia štúdia. Ankety sú sprístupnené, absolventovi z určenej skupiny  po prihlásenia do systému
+is engaged to collecting information from graduates. The faculty can generate various statistics based on these inquiry results. An inquiry creates a person authorizied by faculty. Every inquiry can be targeted on selected graduates group depending on year of graduate???. Inquiries are accessible to graduates after logging in into Alumni system.
 
-\item Mail communication. 
-Modul mailovej komunikacie umoznuje vymenu informacii a komunikaciu zasielanim sprav medzi fakultou a graduates. 
+\item {\em Mail communication} ensures the communication between faculty and graduate using message exchange.
+%Modul mailovej komunikacie umoznuje vymenu informacii a komunikaciu zasielanim sprav medzi fakultou a graduates. 
 
-\item Personal presentation. 
-Každý študent po absolvovaní bakalárskeho štúdia na fakulte sa automaticky stáva absolventom a takisto sa mu automaticky vytvorí konto v systéme ALUMNI. Profily absolventov obsahuju informácie ako: meno, priezvisko, študijný program, rok absolvovania štúdia, dosiahnutý titul, téma záverečnej práce/diplomovej práce, zadávateľ, abstrakt. Okrem toho mozu byt v osobnej prezentacii zahrnute 
-kontaktné informácie – telefón, e-mail, ICQ,  web stránka a informacie o aktualnom zamestnanii alebo história zamestnaní. Prezentačný modul slúži na prezentáciu absolventov na základe tychto vypracovaných profilov. 
+\item {\em Personal presentation.}
+%Každý študent po absolvovaní bakalárskeho štúdia na fakulte sa automaticky stáva absolventom a takisto sa mu automaticky vytvorí konto v systéme ALUMNI. Profily absolventov obsahuju informácie ako: meno, priezvisko, študijný program, rok absolvovania štúdia, dosiahnutý titul, téma záverečnej práce/diplomovej práce, zadávateľ, abstrakt. Okrem toho mozu byt v osobnej prezentacii zahrnute  kontaktné informácie – telefón, e-mail, ICQ,  web stránka a informacie o aktualnom zamestnanii alebo história zamestnaní. Prezentačný modul slúži na prezentáciu absolventov na základe tychto vypracovaných profilov. 
+Every student that graduates is automatically added to Alumni database and a personal account is created for him. Personal profile of graduate includes information such as name, surname, study program, year of graduate, academical degree and information about thesis or diploma work. Optionally other personal information can be added to personal profile, for example e-mail, phone or icq number, link to personal web page or information about current employment. 
 
-\item Statistical module. 
-Štatistický modul slúži na zaznamenávanie štatistických údajov pre účely fakulty. Pracuje nad údajmi z ankiet, a profilov absolventov, a umožňuje generovať výstupnú zostavu v podobe všetkých hlasov pre zvolenú anketu, alebo akciu, resp. používateľa alebo používateľskú skupinu. Generovanie takýchto štatistík môže určiť smer zlepšenia systému vzhľadom k záujmom absolventov. Štatistický modul zaznamenáva prístupy absolventov
+\item {\em Statistical module}
+% Štatistický modul slúži na zaznamenávanie štatistických údajov pre účely fakulty. Pracuje nad údajmi z ankiet, a profilov absolventov, a umožňuje generovať výstupnú zostavu v podobe všetkých hlasov pre zvolenú anketu, alebo akciu, resp. používateľa alebo používateľskú skupinu. Generovanie takýchto štatistík môže určiť smer zlepšenia systému vzhľadom k záujmom absolventov. Štatistický modul zaznamenáva prístupy absolventov
+collects various statistical information. It operates on data from inquiries, graduates personal data and allows generating reports. This modul also collects system visit rate. Outputs from various statistics can help faculty to inproove the quality and adapt to new requirements.
 
 \end{itemize}
 
 \section{Architecture}
 
-The best accessibility for graduates and public is the main requirement for design architecture. The architecture type client-server based on web technologies fulfills this requirement. The whole interaction with the system runs on the internet browser, which is common part of operating system and doesn’t depend on application part of the server. Business logic and functionality are implemented right on the server and it depends on actual implementation.
+The best accessibility for graduates and public is the main requirement for design architecture. The architecture type client-server based on web technologies fulfills this requirement. The whole interaction with the system runs on the internet browser, which is common part of operating system and doesn't depend on application part of the server. Business logic and functionality are implemented right on the server and it depends on actual implementation.
 
 System logic on the side of the server is divided into several modules, which provide whole functionality of the system. All modules are created on the PHP framework CakePHP, which is rapid development kit. This framework makes our job with the system much easier, because it has already included solutions for basic problems in web application development as authentication, database access, presentation, etc.
 
 The CakePHP fully supports the MVC (Model-View-Controller) model\cite{cakephp}. This model divides the system into three functional parts Model, View, Controller. Relations between these parts are shown on Figure ~\ref{fig:mvc}.
 
 
-\fig{width=7cm}{images/mvc}{fig:mvc}{Model-View-Controller.}
+\fig{width=8cm}{images/mvc}{fig:mvc}{Model-View-Controller.}
 
 {\em Model.} It represents the part, which takes care of collecting and storing data. This means database or controlling scripts, which execute actions over this database. The data gained in the part Model are provided to the part View.
 
@@ -124,9 +112,9 @@ The CakePHP fully supports the MVC (Model-View-Controller) model\cite{cakephp}. 
       
 \section{Conclusion}
 
-The information system is available for general public through the web interface. A non-registered visitor can look at the list of graduates according to year of graduation or a field of study. He can also look at graduates profiles. The level of profile details shown to public is limited. By default, a public visitor can only see name and surname of a graduate, year of graduation and a field of study. The faculty endevaours  to propagate its graduates. Therefore graduates can also add some information about themselves into the system during the study such as working experience, knowledge. Graduates can enable to display this information in their profiles for public visitors. Inserted information can be used as an input for generating graduate`s curriculum vitae in pdf format, which is provided automatically. It is in a graduate´s competence, which information will be displayed in their profiles and will be shown to general public. Public also includes searching pages with their crawlers. A graduate can use it for the building of his virtual web identity on the internet. 
+The information system is available for general public through the web interface. A non-registered visitor can look at the list of graduates according to year of graduation or a field of study. He can also look at graduates profiles. The level of profile details shown to public is limited. By default, a public visitor can only see name and surname of a graduate, year of graduation and a field of study. The faculty endeavors to propagate its graduates. Therefore graduates can also add some information about themselves into the system during the study such as working experience, knowledge. Graduates can enable to display this information in their profiles for public visitors. Inserted information can be used as an input for generating graduate's curriculum vitae in pdf format, which is provided automatically. It is in a graduate's competence, which information will be displayed in their profiles and will be shown to general public. Public also includes searching pages with their crawlers. A graduate can use it for the building of his virtual web identity on the internet. 
 
-Our Alumni system solves the problem concerning graduate’s feedback towards to the faculty with an inquiry module. In this module the faculty can define questions with answers which active graduates can respond. It depends on the faculty which way it will choose. This module should be used for collecting data which are not included in graduate profiles and have high information value for the faculty.
+Our Alumni system solves the problem concerning graduate's feedback towards to the faculty with an inquiry module. In this module the faculty can define questions with answers which active graduates can respond. It depends on the faculty which way it will choose. This module should be used for collecting data which are not included in graduate profiles and have high information value for the faculty.
 
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
