korekcia spellingu - inproove, ...

--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -57,7 +57,7 @@ A FIIT STU graduate is a person who has been studying at this faculty for minimu
 It means creation and maintenance of the graduate database and presentation of basic information about individuals to public on the web without access restrictions. We bring some brief information about a graduate, when he studied and graduated, his specialization, topic of his bachelor and diploma project or abstracts. If we are able to get necessary information, the presentation could also involve a graphical expression of employment and skills of graduates from different points of view.
 
 {\em Provide gathering of actual information about graduates in practice to the faculty.} 
-It means to get actual information about contacts, jobs, career development, application/professional focus, areas of graduate activity and personal interests, etc. This information is provided by a graduate. It has a personal character, it means getting them require interest in contact on the both sides and this data should be under protection with well-organized authorized access.
+It means to get actual information about contacts, jobs, career development, application/professional focus, areas of graduate activity and personal interests, etc. This information is provided by a graduate. It has a personal character, it means getting them requires interest in contact on the both sides and this data should be under protection with well-organized authorized access.
 
 {\em Enable communication to graduates.}
 It should be easy and safe way to communicate in informatics community protected by well-designed access rights for groups of authorized participants. It should be used for informal communication within community of colleagues and experts from practice. Except providing contacts, the system can also inform graduates about professional activities of the community, provide some space for them - a forum, eventually some other activities.
@@ -78,24 +78,24 @@ represents a tool for faculty, which allows to inform graduates and public about
 
 \item {\em Inquiry module}
 %Anketový modul slúži na získavanie požadovaných údajov od absolventov pre fakultu. Na základe výsledkov z ankiet môže fakulta generovať požadované štatistiky. Vytvárať ankety má možnosť iba osoba, ktorú určí samotná fakulta. Každá anketa je smerovaná určenej skupine absolventov na základe roku ukončenia štúdia. Ankety sú sprístupnené, absolventovi z určenej skupiny  po prihlásenia do systému
-is engaged to collecting information from graduates. The faculty can generate various statistics based on these inquiry results. An inquiry creates a person authorizied by faculty. Every inquiry can be targeted on selected graduates group depending on year of graduate???. Inquiries are accessible to graduates after logging in into Alumni system.
+is engaged to collecting information from graduates. The faculty can generate various statistics based on these inquiry results. An inquiry creates a person authorized by faculty. Every inquiry can be targeted on selected graduates group depending on year of graduate???. Inquiries are accessible to graduates after logging in into Alumni system.
 
 \item {\em Mail communication} ensures the communication between faculty and graduate using message exchange.
 %Modul mailovej komunikacie umoznuje vymenu informacii a komunikaciu zasielanim sprav medzi fakultou a graduates. 
 
 \item {\em Personal presentation.}
 %Každý študent po absolvovaní bakalárskeho štúdia na fakulte sa automaticky stáva absolventom a takisto sa mu automaticky vytvorí konto v systéme ALUMNI. Profily absolventov obsahuju informácie ako: meno, priezvisko, študijný program, rok absolvovania štúdia, dosiahnutý titul, téma záverečnej práce/diplomovej práce, zadávateľ, abstrakt. Okrem toho mozu byt v osobnej prezentacii zahrnute  kontaktné informácie – telefón, e-mail, ICQ,  web stránka a informacie o aktualnom zamestnanii alebo história zamestnaní. Prezentačný modul slúži na prezentáciu absolventov na základe tychto vypracovaných profilov. 
-Every student that graduates is automatically added to Alumni database and a personal account is created for him. Personal profile of graduate includes information such as name, surname, study program, year of graduate, academical degree and information about thesis or diploma work. Optionally other personal information can be added to personal profile, for example e-mail, phone or icq number, link to personal web page or information about current employment. 
+Every student that graduates is automatically added to Alumni database and a personal account is created for him. Personal profile of graduate includes information such as name, surname, study program, year of graduate, academical degree and information about thesis or diploma work. Optionally other personal information can be added to personal profile, for example e-mail, phone or ICQ number, link to personal web page or information about current employment. 
 
 \item {\em Statistical module}
 % Štatistický modul slúži na zaznamenávanie štatistických údajov pre účely fakulty. Pracuje nad údajmi z ankiet, a profilov absolventov, a umožňuje generovať výstupnú zostavu v podobe všetkých hlasov pre zvolenú anketu, alebo akciu, resp. používateľa alebo používateľskú skupinu. Generovanie takýchto štatistík môže určiť smer zlepšenia systému vzhľadom k záujmom absolventov. Štatistický modul zaznamenáva prístupy absolventov
-collects various statistical information. It operates on data from inquiries, graduates personal data and allows generating reports. This modul also collects system visit rate. Outputs from various statistics can help faculty to inproove the quality and adapt to new requirements.
+collects various statistical information. It operates on data from inquiries, graduates personal data and allows generating reports. This module also collects system visit rate. Outputs from various statistics can help faculty to improve the quality and adapt to new requirements.
 
 \end{itemize}
 
 \section{Architecture}
 
-The best accessibility for graduates and public is the main requirement for design architecture. The architecture type client-server based on web technologies fulfills this requirement. The whole interaction with the system runs on the internet browser, which is common part of operating system and doesn't depend on application part of the server. Business logic and functionality are implemented right on the server and it depends on actual implementation.
+The best accessibility for graduates and public is the main requirement for design architecture. The architecture type client-server based on web technologies fulfils this requirement. The whole interaction with the system runs on the internet browser, which is common part of operating system and doesn't depend on application part of the server. Business logic and functionality are implemented right on the server and it depends on actual implementation.
 
 System logic on the side of the server is divided into several modules, which provide whole functionality of the system. All modules are created on the PHP framework CakePHP, which is rapid development kit. This framework makes our job with the system much easier, because it has already included solutions for basic problems in web application development as authentication, database access, presentation, etc.
 
@@ -112,7 +112,7 @@ The CakePHP fully supports the MVC (Model-View-Controller) model\cite{cakephp}. 
       
 \section{Conclusion}
 
-The information system is available for general public through the web interface. A non-registered visitor can look at the list of graduates according to year of graduation or a field of study. He can also look at graduates profiles. The level of profile details shown to public is limited. By default, a public visitor can only see name and surname of a graduate, year of graduation and a field of study. The faculty endeavors to propagate its graduates. Therefore graduates can also add some information about themselves into the system during the study such as working experience, knowledge. Graduates can enable to display this information in their profiles for public visitors. Inserted information can be used as an input for generating graduate's curriculum vitae in pdf format, which is provided automatically. It is in a graduate's competence, which information will be displayed in their profiles and will be shown to general public. Public also includes searching pages with their crawlers. A graduate can use it for the building of his virtual web identity on the internet. 
+The information system is available for general public through the web interface. A non-registered visitor can look at the list of graduates according to year of graduation or a field of study. He can also look at graduates profiles. The level of profile details shown to public is limited. By default, a public visitor can only see name and surname of a graduate, year of graduation and a field of study. The faculty endeavours to propagate its graduates. Therefore graduates can also add some information about themselves into the system during the study such as working experience, knowledge. Graduates can enable to display this information in their profiles for public visitors. Inserted information can be used as an input for generating graduate's curriculum vitae in pdf format, which is provided automatically. It is in a graduate's competence, which information will be displayed in their profiles and will be shown to general public. Public also includes searching pages with their crawlers. A graduate can use it for the building of his virtual web identity on the internet. 
 
 Our Alumni system solves the problem concerning graduate's feedback towards to the faculty with an inquiry module. In this module the faculty can define questions with answers which active graduates can respond. It depends on the faculty which way it will choose. This module should be used for collecting data which are not included in graduate profiles and have high information value for the faculty.
 
