r.51: tied up -> establish, cut off -> broken

--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -48,7 +48,7 @@ The information system for communication with graduates represents only one of m
 
 Communication between graduates and university can be suitable for both sides. In this article we would like to introduce web based software system called ALUMNI developed at Team Project. Our faculty has ambitions to present its graduates to public. The faculty also wants to keep in touch with its graduates using web application, providing a channel for professional and social communication between graduates themselves and the faculty. Focus of the ALUMNI project is on design and implementation of the system that would accomplish these needs. 
 
-A FIIT STU graduate is a person who has been studying at this faculty for minimum three years or more. During this period, the graduate tied up a lot of social contacts with his classmates and his teachers as well. After graduating, these contacts usually cut off and only rarely continue. In general, each student, after he leaves the university, losts most of the contacts. However, the faculty does not want to continue in this trend. The faculty looks at its graduates as at potential business partners with possible cooperation with them after study. Graduates are very good source of information and critics that could help improve the quality of faculty. The best way how to gain required information is feedback forms.
+A FIIT STU graduate is a person who has been studying at this faculty for minimum three years or more. During this period graduates establish a lot of social contacts with his classmates and his teachers as well. After graduating, these contacts are usually broken and only rarely continue. Generally after student leaves the university, he losts most of his contacts. However, the faculty does not want to continue in this trend. The faculty looks at its graduates as potential business partners with possible cooperation with them after study. Graduates are very good source of information and critics that could help to improve the quality of faculty. The best way how to gain required information are feedback forms.
 
 
 \section{Business goals}
@@ -78,7 +78,7 @@ represents a tool for faculty, which allows to inform graduates and public about
 
 \item {\em Inquiry module}
 %Anketový modul slúži na získavanie požadovaných údajov od absolventov pre fakultu. Na základe výsledkov z ankiet môže fakulta generovať požadované štatistiky. Vytvárať ankety má možnosť iba osoba, ktorú určí samotná fakulta. Každá anketa je smerovaná určenej skupine absolventov na základe roku ukončenia štúdia. Ankety sú sprístupnené, absolventovi z určenej skupiny  po prihlásenia do systému
-is engaged to collecting information from graduates. The faculty can generate various statistics based on these inquiry results. An inquiry creates a person authorized by faculty. Every inquiry can be targeted on selected graduates group depending on year of graduate???. Inquiries are accessible to graduates after logging in into Alumni system.
+is engaged to collecting information from graduates. The faculty can generate various statistics based on these inquiry results. An inquiry creates a person authorized by faculty. Every inquiry can be targeted on selected graduates group depending on the year of graduate. Inquiries are accessible to graduates after logging in into Alumni system.
 
 \item {\em Mail communication} ensures the communication between faculty and graduate using message exchange.
 %Modul mailovej komunikacie umoznuje vymenu informacii a komunikaciu zasielanim sprav medzi fakultou a graduates. 
